--- a/archives/zhihu-search/2024-03-26.md
+++ b/archives/zhihu-search/2024-03-26.md
@@ -1,9 +1,10 @@
 # 2024-03-26
 
-共 10 条
+共 11 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Tue Mar 26 2024 11:01:02 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Mar 26 2024 12:00:39 GMT+0800 (China Standard Time) -->
+1. [为什么古人提倡「少沐浴」](https://www.zhihu.com/search?q=为什么古人提倡「少沐浴」)
 1. [考公资料](https://www.zhihu.com/search?q=考公资料)
 1. [雅思机考](https://www.zhihu.com/search?q=雅思机考)
 1. [雅思报名](https://www.zhihu.com/search?q=雅思报名)
